llvm-merge-example-ubuntu/example/llvm-latest/malloc_401280.ll.out
llc: malloc_401280.ll:1782:20: error: '%R692' defined with type 'float'
  %R693 = zext i32 %R692 to i128
                   ^
